# openloomi

./: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  test.yml  update-cask.yml
Casks/: openloomi.rb
apps/marketing/: .gitignore  .prettierignore  .prettierrc  .tailwindignore  eslint.config.mjs  mdx-components.js  next.config.js  package.json  tsconfig.json  vercel.json
apps/marketing/app/: globals.css  home-client.jsx  layout.jsx  page.tsx
apps/marketing/blogs/: ai-product-paradigm-shift.md  alloomi-hermes-agent-openclaw-comparison.md  alloomi-privacy.md  alloomi-the-road-ahead.md  avatar-still-amnesic.md  beyond-the-chatbox.md  exploring-vibe-coding.md  full-cognitive-cycle.md  (+13 more)
apps/web/: .env.example  drizzle.config.sqlite.ts  instrumentation.ts  next.config.js  package.json  proxy.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/resources/: loading.html
apps/web/src-tauri/src/: constants.rs  js_scheduler.rs  main.rs  menu.rs  node.rs  render_engine.rs  render_runtime.rs  runtime_components.rs  storage.rs  system.rs  update.rs
apps/web/src-tauri/src/telegram/: desktop.rs  mod.rs  types.rs
apps/web/src-tauri/tests/: node_test.rs  update_test.rs
skills/alloomi-connectors/: SKILL.md
skills/alloomi-memory/: SKILL.md
skills/openloomi-api/: SKILL.md
skills/openloomi-connectors/: SKILL.md
skills/openloomi-feature-guide/: SKILL.md
skills/openloomi-memory/: SKILL.md
(+657 files in other folders)
