[package]
name = "openloomi"
version = "0.5.0"
description = "openloomi AI Assistant - Your Personal Productivity Tool"
authors = ["OpenLoomi Team"]
edition = "2021"

[lib]
name = "openloomi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
sentry = { version = "0.32", features = [] }
env_logger = "0.10"
url = "2.5"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
base64 = "0.22"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
